--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,5 @@
 backend:
   name: git-gateway
-  local_backend: true
   branch: main # Branch to update (optional; defaults to master)
 # These lines should *not* be indented
 media_folder: "static/images/uploads" # Media files will be stored in the repo under static/images/uploads
@@ -23,12 +22,26 @@ collections:
                 name: "text-and-image"
                 widget: "object"
                 fields:
-                  - { label: "Heading", name: "heading", widget: "string" }
-                  - { label: "Body", name: "body", widget: "markdown", required: false }
-                  - { label: "Button", name: "button", widget: "string", required: false }
-                  - { label: "Button Link", name: "button_link", widget: "string", required: false }
-                  - { label: "Image", name: "image", widget: "image", required: false }
-
+                  - label: "Heading"
+                    name: "heading"
+                    widget: "string"
+                    required: false  # Make this field optional
+                  - label: "Body"
+                    name: "body"
+                    widget: "markdown"
+                    required: false  # Make this field optional
+                  - label: "Button"
+                    name: "button"
+                    widget: "string"
+                    required: false  # Make this field optional
+                  - label: "Button Link"
+                    name: "button_link"
+                    widget: "string"
+                    required: false  # Make this field optional
+                  - label: "Image"
+                    name: "image"
+                    widget: "image"
+                    required: false  # Make this field optional
 
   - name: "blog" # Used in routes, e.g., /admin/collections/blog
     label: "Blog" # Used in the UI
