--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -42,6 +42,10 @@ collections:
                     name: "image"
                     widget: "image"
                     required: false  # Make this field optional
+                  - label: "Color"
+                    name: "color"
+                    widget: "color"
+                    required: false  # Make this field optional
               - label: "Text and Image"
                 name: "text-and-image"
                 widget: "object"
