--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -13,25 +13,25 @@ collections:
         label: "Appearance Configuration" # Label for the file in the CMS
         file: "data/appearance.yml" # Path to your appearance YAML file
         fields:
-          - { name: "branding_site_title", label: "Site Title", widget: "string" }
-          - { name: "branding_logo", label: "Logo", widget: "image" }
-          - { name: "branding_favicon", label: "Favicon", widget: "image" }
-          - { name: "branding_logo_width", label: "Logo Width", widget: "number" }
-          - { name: "header_top_header_color", label: "Top Header Color", widget: "color" }
-          - { name: "header_header_background_color", label: "Header Background Color", widget: "color" }
-          - { name: "header_enable_white_text", label: "Enable White Text", widget: "boolean" }
-          - { name: "header_enable_white_text_top", label: "Enable White Text (Top)", widget: "boolean" }
-          - { name: "header_transparent_background", label: "Transparent Background", widget: "boolean" }
-          - { name: "header_call_to_action_link", label: "Call to Action Link", widget: "string" }
-          - { name: "header_call_to_action_label", label: "Call to Action Label", widget: "string" }
-          - { name: "header_remove_call_to_action", label: "Remove Call to Action", widget: "boolean" }
-          - { name: "pages_image", label: "Pages Image", widget: "image" }
-          - { name: "colors_primary_button_background_color", label: "Primary Button Background Color", widget: "color" }
-          - { name: "colors_primary_button_text_color", label: "Primary Button Text Color", widget: "color" }
-          - { name: "colors_accent", label: "Accent Color", widget: "color" }
-          - { name: "colors_idx_title_background_color", label: "IDX Title Background Color", widget: "color" }
-          - { name: "colors_idx_title_text_color", label: "IDX Title Text Color", widget: "color" }
-          - { name: "form_form_disclaimer", label: "Form Disclaimer", widget: "markdown" }
+          - { name: "branding_site_title", label: "Site Title", widget: "string", required: false }
+          - { name: "branding_logo", label: "Logo", widget: "image", required: false }
+          - { name: "branding_favicon", label: "Favicon", widget: "image", required: false }
+          - { name: "branding_logo_width", label: "Logo Width", widget: "number", required: false }
+          - { name: "header_top_header_color", label: "Top Header Color", widget: "color", required: false }
+          - { name: "header_header_background_color", label: "Header Background Color", widget: "color", required: false }
+          - { name: "header_enable_white_text", label: "Enable White Text", widget: "boolean", required: false }
+          - { name: "header_enable_white_text_top", label: "Enable White Text (Top)", widget: "boolean", required: false }
+          - { name: "header_transparent_background", label: "Transparent Background", widget: "boolean", required: false }
+          - { name: "header_call_to_action_link", label: "Call to Action Link", widget: "string", required: false }
+          - { name: "header_call_to_action_label", label: "Call to Action Label", widget: "string", required: false }
+          - { name: "header_remove_call_to_action", label: "Remove Call to Action", widget: "boolean", required: false }
+          - { name: "pages_image", label: "Pages Image", widget: "image", required: false }
+          - { name: "colors_primary_button_background_color", label: "Primary Button Background Color", widget: "color", required: false }
+          - { name: "colors_primary_button_text_color", label: "Primary Button Text Color", widget: "color", required: false }
+          - { name: "colors_accent", label: "Accent Color", widget: "color", required: false }
+          - { name: "colors_idx_title_background_color", label: "IDX Title Background Color", widget: "color", required: false }
+          - { name: "colors_idx_title_text_color", label: "IDX Title Text Color", widget: "color", required: false }
+          - { name: "form_form_disclaimer", label: "Form Disclaimer", widget: "markdown", required: false }
   - name: "home"
     label: "Home Page"
     files:
