--- a/data/appearance.yml
+++ b/data/appearance.yml
@@ -1,8 +1,11 @@
-branding:
-  site_title: null
-  logo: null
-  favicon: /uploads/favicon.png
-  logo_width: 125
+form:
+  form_disclaimer: By submitting the form with your information above you are
+    agreeing to our&nbsp;[Terms and
+    Conditions](/legal/terms-and-conditions/)&nbsp;and&nbsp;[Privacy
+    Policy](/legal/privacy-policy/)
+pages:
+  image: /uploads/shutterstock-20129206822.jpg
+header_top_header_color: "#2b2b2b"
 header:
   top_header_color: "#070811"
   header_background_color: "#ffffff"
@@ -12,18 +15,18 @@ header:
   call_to_action_link: https://search.idxhome.com/organizer/login/132970
   call_to_action_label: My Account
   remove_call_to_action: false
-pages:
-  image: /uploads/shutterstock-20129206822.jpg
 colors:
   primary_button_background_color: "#3fb9be"
   primary_button_text_color: "#ffffff"
   accent: "#3fb9be"
   idx_title_background_color: "#070811"
   idx_title_text_color: "#ffffff"
-form:
-  form_disclaimer: By submitting the form with your information above you are
-    agreeing to our&nbsp;[Terms and
-    Conditions](/legal/terms-and-conditions/)&nbsp;and&nbsp;[Privacy
-    Policy](/legal/privacy-policy/)
+branding_logo_width: 200
+header_header_background_color: "#c4c4c4"
 colors_primary_button_background_color: "#1d92cf"
 colors_primary_button_text_color: "#ffffff"
+branding:
+  site_title: null
+  logo: null
+  favicon: /uploads/favicon.png
+  logo_width: 125
