--- a/data/appearance.yml
+++ b/data/appearance.yml
@@ -1,10 +1,15 @@
+header.header_background_color: "#7a7a7a"
+colors.primary_button_text_color: "#ffffff"
 form:
   form_disclaimer: By submitting the form with your information above you are
     agreeing to our&nbsp;[Terms and
     Conditions](/legal/terms-and-conditions/)&nbsp;and&nbsp;[Privacy
     Policy](/legal/privacy-policy/)
+colors.primary_button_background_color: "#13b69f"
 pages:
   image: /uploads/shutterstock-20129206822.jpg
+branding.logo_width: 200
+colors.accent: "#c53535"
 header_top_header_color: "#2b2b2b"
 header:
   top_header_color: "#070811"
@@ -26,3 +31,4 @@ branding:
   logo: null
   favicon: /uploads/favicon.png
   logo_width: 125
+header.top_header_color: "#dddddd"
