--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -13,25 +13,25 @@ collections:
         label: "Appearance Configuration" # Label for the file in the CMS
         file: "data/appearance.yml" # Path to your appearance YAML file
         fields:
-          - { name: "branding.site_title", label: "Site Title", widget: "string", required: false }
-          - { name: "branding.logo", label: "Logo", widget: "image", required: false }
-          - { name: "branding.favicon", label: "Favicon", widget: "image", required: false }
-          - { name: "branding.logo_width", label: "Logo Width", widget: "number", required: false }
-          - { name: "header.top_header_color", label: "Top Header Color", widget: "color", required: false }
-          - { name: "header.header_background_color", label: "Header Background Color", widget: "color", required: false }
-          - { name: "header.enable_white_text", label: "Enable White Text", widget: "boolean", required: false }
-          - { name: "header.enable_white_text_top", label: "Enable White Text (Top)", widget: "boolean", required: false }
-          - { name: "header.transparent_background", label: "Transparent Background", widget: "boolean", required: false }
-          - { name: "header.call_to_action_link", label: "Call to Action Link", widget: "string", required: false }
-          - { name: "header.call_to_action_label", label: "Call to Action Label", widget: "string", required: false }
-          - { name: "header.remove_call_to_action", label: "Remove Call to Action", widget: "boolean", required: false }
-          - { name: "pages.image", label: "Pages Image", widget: "image", required: false }
-          - { name: "colors.primary_button_background_color", label: "Primary Button Background Color", widget: "color", required: false }
-          - { name: "colors.primary_button_text_color", label: "Primary Button Text Color", widget: "color", required: false }
-          - { name: "colors.accent", label: "Accent Color", widget: "color", required: false }
-          - { name: "colors.idx_title_background_color", label: "IDX Title Background Color", widget: "color", required: false }
-          - { name: "colors.idx_title_text_color", label: "IDX Title Text Color", widget: "color", required: false }
-          - { name: "form.form_disclaimer", label: "Form Disclaimer", widget: "markdown", required: false }
+          - { name: "site_title", label: "Site Title", widget: "string", required: false }
+          - { name: "logo", label: "Logo", widget: "image", required: false }
+          - { name: "favicon", label: "Favicon", widget: "image", required: false }
+          - { name: "logo_width", label: "Logo Width", widget: "number", required: false }
+          - { name: "top_header_color", label: "Top Header Color", widget: "color", required: false }
+          - { name: "header_background_color", label: "Header Background Color", widget: "color", required: false }
+          - { name: "enable_white_text", label: "Enable White Text", widget: "boolean", required: false }
+          - { name: "enable_white_text_top", label: "Enable White Text (Top)", widget: "boolean", required: false }
+          - { name: "transparent_background", label: "Transparent Background", widget: "boolean", required: false }
+          - { name: "call_to_action_link", label: "Call to Action Link", widget: "string", required: false }
+          - { name: "call_to_action_label", label: "Call to Action Label", widget: "string", required: false }
+          - { name: "remove_call_to_action", label: "Remove Call to Action", widget: "boolean", required: false }
+          - { name: "image", label: "Pages Image", widget: "image", required: false }
+          - { name: "primary_button_background_color", label: "Primary Button Background Color", widget: "color", required: false }
+          - { name: "primary_button_text_color", label: "Primary Button Text Color", widget: "color", required: false }
+          - { name: "accent", label: "Accent Color", widget: "color", required: false }
+          - { name: "idx_title_background_color", label: "IDX Title Background Color", widget: "color", required: false }
+          - { name: "idx_title_text_color", label: "IDX Title Text Color", widget: "color", required: false }
+          - { name: "form_disclaimer", label: "Form Disclaimer", widget: "markdown", required: false }
   - name: "home"
     label: "Home Page"
     files:
