--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -80,18 +80,19 @@ collections:
                     name: "image"
                     widget: "image"
                     required: false  # Make this field optional
-              - label: "Testimonials"
-                name: "testimonials"
+              - label: "Featured Grid"
+                name: "featured_grid"
                 widget: "list"
-                summary: '{{fields.quote}} - {{fields.author.name}}'
+                summary: '{{fields.image}}'
                 fields:
-                  - {label: Quote, name: quote, widget: string}
-                  - label: Author
-                    name: author
+                  - {label: body, name: body, widget: markdown}
+                  - label: Featured Block
+                    name: featured_block
                     widget: object
+                    allow_add: true
                     fields:
-                      - {label: Name, name: name, widget: string}
-                      - {label: Avatar, name: avatar, widget: image}
+                      - {label: Body, name: body, widget: markdown}
+                      - {label: Image, name: image, widget: image}
               - label: "Text and Image"
                 name: "text-and-image"
                 widget: "object"
