--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -51,23 +51,23 @@ collections:
                   - label: "Heading"
                     name: "heading"
                     widget: "string"
-                    required: false  # Make this field optional
+                    required: false
                   - label: "Body"
                     name: "body"
                     widget: "markdown"
-                    required: false  # Make this field optional
+                    required: false
                   - label: "Button"
                     name: "button"
                     widget: "string"
-                    required: false  # Make this field optional
+                    required: false
                   - label: "Button Link"
                     name: "button_link"
                     widget: "string"
-                    required: false  # Make this field optional
+                    required: false
                   - label: "Overlay Color"
                     name: "overlayColor"
                     widget: "color"
-                    required: false  # Make this field optional
+                    required: false
                     enableAlpha: true
                   - label: "Heading Color"
                     name: "headingColor"
@@ -75,25 +75,28 @@ collections:
                   - label: "Body Color"
                     name: "bodyColor"
                     widget: "color"
-                    required: false  # Make this field optional
+                    required: false
                   - label: "Image"
                     name: "image"
                     widget: "image"
-                    required: false  # Make this field optional
+                    required: false
               - label: "Featured Grid"
                 name: "featured_grid"
                 widget: "list"
                 fields:
                   - {label: "Body", name: "body", widget: "markdown"}
                   - {label: "Column Number", name: "column_number", widget: "number", min: 2, max: 4, value_type: int}
+                  - {label: "Background Image", name: "background_image", widget: "image", required: false}
+                  - {label: "Background Color", name: "background_color", widget: "color", required: false}
                   - label: "Featured Blocks"
                     name: "featured_blocks"
                     widget: "list"
                     allow_add: true
                     fields:
-                      - {label: "Body", name: "body", widget: "markdown"}
-                      - {label: "Image", name: "image", widget: "image"}
-
+                      - {label: "Body", name: "body", widget: "markdown", required: false}
+                      - {label: "Image", name: "image", widget: "image", required: false}
+                      - {label: "Button Text", name: "button", widget: "string", required: false}
+                      - {label: "Button Link", name: "button_link", widget: "string", required: false}
               - label: "Text and Image"
                 name: "text-and-image"
                 widget: "object"
@@ -101,35 +104,35 @@ collections:
                   - label: "Reverse Column"
                     name: "reverse_column"
                     widget: "boolean"
-                    required: false  # Make this field optional
+                    required: false
                   - label: "Body"
                     name: "body"
                     widget: "markdown"
-                    required: false  # Make this field optional
+                    required: false
                   - label: "Button"
                     name: "button"
                     widget: "string"
-                    required: false  # Make this field optional
+                    required: false
                   - label: "Button Link"
                     name: "button_link"
                     widget: "string"
-                    required: false  # Make this field optional
+                    required: false
                   - label: "Image"
                     name: "image"
                     widget: "image"
-                    required: false  # Make this field optional
+                    required: false
                   - label: "Background Image"
                     name: "background_image"
                     widget: "image"
-                    required: false  # Make this field optional
+                    required: false
                   - label: "Background Color"
                     name: "background_color"
                     widget: "color"
-                    required: false  # Make this field optional
+                    required: false
                   - label: "Body Text Color"
                     name: "body_text_color"
                     widget: "color"
-                    required: false  # Make this field optional
+                    required: false
 
   - name: "blog" # Used in routes, e.g., /admin/collections/blog
     label: "Blog" # Used in the UI
