--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -88,6 +88,7 @@ collections:
                   - {label: "Column Number", name: "column_number", widget: "number", min: 2, max: 4, value_type: int}
                   - {label: "Background Image", name: "background_image", widget: "image", required: false}
                   - {label: "Background Color", name: "background_color", widget: "color", required: false}
+                  - {label: "Body Color", name: "body_color", widget: "color", required: false}
                   - label: "Featured Blocks"
                     name: "featured_blocks"
                     widget: "list"
