--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,13 +8,14 @@ public_folder: "/images/uploads" # The src attribute for uploaded media will beg
 collections:
   - name: "menu"
     label: "Menu"
-    folder: "data"
-    file: "menu.yml"
-    create: true
-    slug: "{{slug}}"
-    fields:
-      - { label: "Name", name: "name", widget: "string" }
-      - { label: "URL", name: "url", widget: "string" }
+    files:
+      - name: "menu"
+        label: "Menu"
+        file: "data/menu.yml"
+        fields:
+          - label: "Name"
+            name: "name"
+            widget: "string"
   - name: "appearance" # This is the collection name
     label: "Appearance" # This is the label shown in the CMS
     files:
