--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -6,17 +6,28 @@ media_folder: "static/images/uploads" # Media files will be stored in the repo u
 public_folder: "/images/uploads" # The src attribute for uploaded media will begin with /images/uploads
 
 collections:
-  - name: "menu"
+  - name: "Menu"
     label: "Menu"
     files:
       - name: "menu"
-        label: "Menu"
+        label: "Main Menu"
         file: "data/menu.yml"
-        widget: "list"
-        allow_add: true
         fields:
-          - { name: "name", label: "Name", widget: "string" }
-          - { name: "url", label: "URL", widget: "string" }
+          - label: "Menu Order"
+            name: "menu_order"
+            widget: "list"
+            sortable: true
+            fields:
+              - label: "Hero"
+                name: "hero"
+                widget: "object"
+                fields:
+                  - label: "Name"
+                    name: "name"
+                    widget: "string"
+                  - label: "Link"
+                    name: "link"
+                    widget: "string"
   - name: "appearance" # This is the collection name
     label: "Appearance" # This is the label shown in the CMS
     files:
